// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-zwltl6-0 fSPHfK"
  data-testid="header-bg"
>
  <div
    class="header__Container-zwltl6-2 jegQjR"
  >
    <a
      href="/"
    >
      <img
        alt="Netflix"
        class="header__Logo-zwltl6-3 bSLaZi"
        src="/logo.svg"
      />
    </a>
    <p
      class="header__Link-zwltl6-9 hBPByD"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-zwltl6-2 jegQjR"
>
  <a
    href="/"
  >
    <img
      alt="Netflix"
      class="header__Logo-zwltl6-3 bSLaZi"
      src="/logo.svg"
    />
  </a>
  <a
    class="header__ButtonLink-zwltl6-4 iKJjpe"
    href="/"
  >
    Sign In
  </a>
  <p
    class="header__Link-zwltl6-9 jCTKaj"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header /> with a background 1`] = `
<div
  class="header__Background-zwltl6-0 fSTLFC"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-zwltl6-2 jegQjR"
  >
    <div
      class="header__Group-zwltl6-1 jBgtFb"
    >
      <a
        href="/"
      >
        <img
          alt="Netflix"
          class="header__Logo-zwltl6-3 bSLaZi"
          src="/images/logo.svg"
        />
      </a>
      <p
        class="header__Link-zwltl6-9 jCTKaj"
      >
        Series
      </p>
      <p
        class="header__Link-zwltl6-9 jCTKaj"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-zwltl6-1 jBgtFb"
    >
      <div
        class="header__Search-zwltl6-12 lcCmYZ"
      >
        <button
          class="header__SearchIcon-zwltl6-13 EDpag"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-zwltl6-14 miWmI"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-zwltl6-11 kaedew"
      >
        <button
          class="header__Picture-zwltl6-8 dajUlR"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-zwltl6-10 hGqyHE"
        >
          <div
            class="header__Group-zwltl6-1 jBgtFb"
          >
            <button
              class="header__Picture-zwltl6-8 dajUlR"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-zwltl6-9 jCTKaj"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-zwltl6-1 jBgtFb"
          >
            <p
              class="header__Link-zwltl6-9 jCTKaj"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-zwltl6-2 header__Feature-zwltl6-5 jegQjR knsWux"
  >
    <h2
      class="header__FeatureCallOut-zwltl6-7 doaeVk"
      style=""
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-zwltl6-6 cqwRRH"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-zwltl6-15 cNEEqz"
    >
      Play
    </button>
  </div>
</div>
`;
